se hace nueva toma de decisiones

--- a/apollo/src/assets/email/email_template.html
+++ b/apollo/src/assets/email/email_template.html
@@ -375,12 +375,13 @@
                       </td>
                     </tr>
                   </table>
-                  <p><strong>Buy:</strong></p>
+                  <p><strong>Buy: 
+                    <p class="content" id="previous_price"> </p></strong></p>
                   <table border="1" class="dataframe" id="buy_table">
 
 </table>
                   <br>
-                    <p><strong>Sell:</strong></p>
+                    <p><strong>Sell: <p class="content" id="previous_price"> </p></strong></p>
                     <table border="1" class="dataframe" id="sell_table">
 
   </table>
@@ -407,7 +408,7 @@
                           <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                             <tbody>
                               <tr>
-                                <img height="75" width="75" src="https://app.urlgeni.us/links/117418/qr_code.png" />
+                                <img height="75" width="75" src="https://app.urlgeni.us/links/225714/qr_code.png" />
                               </tr>
                             </tbody>
                           </table>
