Se ajusta la toma de precios previos de bid/ask

--- a/apollo/src/assets/email/email_template.html
+++ b/apollo/src/assets/email/email_template.html
@@ -375,13 +375,13 @@
                       </td>
                     </tr>
                   </table>
-                  <p><strong>Buy: 
+                  <p><strong>Buy<br>Previous High Ask: 
                     <p class="content" id="previous_price"> </p></strong></p>
                   <table border="1" class="dataframe" id="buy_table">
 
 </table>
                   <br>
-                    <p><strong>Sell: <p class="content" id="previous_price"> </p></strong></p>
+                    <p><strong>Sell<br>Previous Low Bid: <p class="content" id="previous_price"> </p></strong></p>
                     <table border="1" class="dataframe" id="sell_table">
 
   </table>
