se añade identificador de modelo utilizado

--- a/apollo/src/assets/email/email_template.html
+++ b/apollo/src/assets/email/email_template.html
@@ -375,6 +375,7 @@
                       </td>
                     </tr>
                   </table>
+                  Model version: <p class="model_version" id="model_version"><strong></strong>
                   <p><strong>Buy<br>Previous High Ask: 
                     <p class="content" id="previous_price"> </p></strong></p>
                   <table border="1" class="dataframe" id="buy_table">
